force-app/main/default/objects/KDCE_ConsumerLoginHistory__c/KDCE_ConsumerLoginHistory__c.object-meta.xml
<CustomObject>
    <label>Consumer Login History</label>
    <nameField>
        <displayFormat>CLH-{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumer Login Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>