force-app/main/default/objects/KDCE_ConsumerLoginHistory__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consumer Login Histories</relationshipLabel>
    <relationshipName>ConsumerLoginHistories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>