force-app/main/default/objects/KDCE_ConsumerLoginHistory__c/fields/IsKakaoLogin__c.field-meta.xml
<CustomField>
    <fullName>IsKakaoLogin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kakao Login Y/N</label>
    <type>Checkbox</type>
</CustomField>