force-app/main/default/objects/KDCE_ConsumerLoginHistory__c/fields/LoginDate__c.field-meta.xml
<CustomField>
    <fullName>LoginDate__c</fullName>
    <label>Login Date</label>
    <type>DateTime</type>
</CustomField>