force-app/main/default/objects/KDCE_ConsumerLoginHistory__c/fields/TokenExpireTime__c.field-meta.xml
<CustomField>
    <fullName>TokenExpireTime__c</fullName>
    <label>Token Expire Time</label>
    <type>DateTime</type>
</CustomField>